# adept-fork

./: CMakeLists.txt  README  adept.spec  make_src_archive.sh
cmake/Modules/: FindGSL.cmake
debian/: README.Debian  adept-dev.install  changelog  control  copyright  docs  libadept1-dev.dirs  rules
include/: adept.h
src/: adept.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/winbuild/: CMakeLists.txt  main.cpp
